--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "icphackbuild3",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -40,7 +41,7 @@
     "postcss": "^8.4.31",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "util": "0.12.4",
     "vite": "^4.5.0"
   }
