--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "swiper": "^10.3.1"
@@ -32,7 +33,7 @@
     "assert": "2.0.0",
     "autoprefixer": "^10.4.16",
     "buffer": "6.0.3",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
